<resources>
    <string name="app_name">Calculator</string>
    <string name="bksp"><![CDATA[<—]]></string>
    <string name="_0">0</string>
    <string name="_eq">=</string>
    <string name="_div">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_mol">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_sot">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_sum">+</string>
    <string name="ob">(</string>
    <string name="cb">)</string>
    <string name="expr">expr</string>
</resources>
